--- a/long-term_project/my_project/my_project/my_project.vcxproj.filters
+++ b/long-term_project/my_project/my_project/my_project.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="circle.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="my_point.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
