--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+MyPrivateFolder/*.docx
+MyPrivateFolder/*.rar
+MyPrivateFolder/*.zip
+
 # User-specific files
 *.rsuser
 *.suo
