Friend isnt my friend
соединил все .h файлы в один, написал новую проверку на пересечение треугольника и квадрата

--- a/long-term_project/my_project/my_project/my_project.vcxproj
+++ b/long-term_project/my_project/my_project/my_project.vcxproj
@@ -128,15 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="circle.cpp" />
+    <ClCompile Include="figures.cpp" />
     <ClCompile Include="my_project.cpp" />
     <ClCompile Include="square.cpp" />
     <ClCompile Include="triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="circle.h" />
+    <ClInclude Include="figures.h" />
     <ClInclude Include="my_point.h" />
-    <ClInclude Include="square.h" />
-    <ClInclude Include="triangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
