--- a/long-term_project/my_project/my_project/my_project.vcxproj.filters
+++ b/long-term_project/my_project/my_project/my_project.vcxproj.filters
@@ -27,18 +27,15 @@
     <ClCompile Include="circle.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="figures.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="square.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="triangle.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="circle.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="my_point.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="figures.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
